updated baseline model

--- a/src/testing.ipynb
+++ b/src/testing.ipynb
@@ -2275,8 +2275,189 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import OneHotEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('/users/jameshull/documents/github/hisa-data/races_2023.csv', nrows=10000)\n",
+    "del df_raw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SURFACES = ['D', 'T']\n",
+    "RACE_TYPES = ['SPI', 'ALW', 'MDN', 'DBY', 'DTR', 'STK']\n",
+    "COURSE_TYPES = ['D', 'M']\n",
+    "TRACK_CONDITIONS = ['FT', 'GD']\n",
+    "WEATHERS = ['C', 'L']\n",
+    "TRACK_SEALEDS = ['Y', 'N']\n",
+    "SEXES = ['G', 'M', 'F', 'C', 'H']\n",
+    "\n",
+    "cols_for_model = ['age', 'distance_id']\n",
+    "for i in SURFACES:\n",
+    "    df[f'surface_{i}'] = np.where(\n",
+    "        df['surface'] == i, 1, 0\n",
+    "    )\n",
+    "    cols_for_model.append(f'surface_{i}')\n",
+    "\n",
+    "for i in RACE_TYPES:\n",
+    "    df[f'race_type_{i}'] = np.where(\n",
+    "        df['race_type'] == i, 1, 0\n",
+    "    )\n",
+    "    cols_for_model.append(f'race_type_{i}')\n",
+    "\n",
+    "for i in COURSE_TYPES:\n",
+    "    df[f'course_type_{i}'] = np.where(\n",
+    "        df['course_type'] == i, 1, 0\n",
+    "    )\n",
+    "    cols_for_model.append(f'course_type_{i}')\n",
+    "\n",
+    "for i in TRACK_CONDITIONS:\n",
+    "    df[f'track_condition_{i}'] = np.where(\n",
+    "        df['track_condition'] == i, 1, 0\n",
+    "    )\n",
+    "    cols_for_model.append(f'track_condition_{i}')\n",
+    "\n",
+    "for i in WEATHERS:\n",
+    "    df[f'weather_{i}'] = np.where(\n",
+    "        df['weather'] == i, 1, 0\n",
+    "    )\n",
+    "    cols_for_model.append(f'weather_{i}')\n",
+    "\n",
+    "for i in TRACK_SEALEDS:\n",
+    "    df[f'track_sealed_{i}'] = np.where(\n",
+    "        df['track_sealed_indicator'] == i, 1, 0\n",
+    "    )\n",
+    "    cols_for_model.append(f'track_sealed_{i}')\n",
+    "\n",
+    "for i in SEXES:\n",
+    "    df[f'sex_{i}'] = np.where(\n",
+    "        df['sex'] == i, 1, 0\n",
+    "    )\n",
+    "    cols_for_model.append(f'sex_{i}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['age',\n",
+       " 'distance_id',\n",
+       " 'surface_D',\n",
+       " 'surface_T',\n",
+       " 'race_type_SPI',\n",
+       " 'race_type_ALW',\n",
+       " 'race_type_MDN',\n",
+       " 'race_type_DBY',\n",
+       " 'race_type_DTR',\n",
+       " 'race_type_STK',\n",
+       " 'course_type_D',\n",
+       " 'course_type_M',\n",
+       " 'track_condition_FT',\n",
+       " 'track_condition_GD',\n",
+       " 'weather_C',\n",
+       " 'weather_L',\n",
+       " 'track_sealed_Y',\n",
+       " 'track_sealed_N',\n",
+       " 'sex_G',\n",
+       " 'sex_M',\n",
+       " 'sex_F',\n",
+       " 'sex_C',\n",
+       " 'sex_H']"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cols_for_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['race_date', 'track_id', 'race_number', 'race_type', 'distance_id',\n",
+       "       'distance_unit', 'surface', 'course_type', 'track_condition', 'weather',\n",
+       "       'track_sealed_indicator', 'registration_number', 'medication',\n",
+       "       'equipment', 'weight_carried', 'horse_weight', 'official_position',\n",
+       "       'length_behind_at_finish', 'jockey_id', 'trainer_id', 'owner_id',\n",
+       "       'trouble_indicator', 'scratch_indicator', 'scratch_reason',\n",
+       "       'short_comment', 'long_comment', 'horse_name', 'sex', 'age',\n",
+       "       'surface_D', 'surface_T', 'race_type_SPI', 'race_type_ALW',\n",
+       "       'race_type_MDN', 'race_type_DBY', 'race_type_DTR', 'race_type_STK',\n",
+       "       'course_type_D', 'course_type_M', 'track_condition_FT',\n",
+       "       'track_condition_GD', 'weather_C', 'weather_L', 'track_sealed_Y',\n",
+       "       'track_sealed_N', 'sex_G', 'sex_M', 'sex_F', 'sex_C', 'sex_H'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "G    0.5118\n",
+       "M    0.2043\n",
+       "F    0.1879\n",
+       "C    0.0529\n",
+       "H    0.0370\n",
+       "R    0.0061\n",
+       "Name: sex, dtype: float64"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['sex'].value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
