finished data refactor

--- a/src/testing.ipynb
+++ b/src/testing.ipynb
@@ -231,10 +231,7 @@
     "\n",
     "def calculate_beta_binom_params(df: pd.DataFrame, x_column: str, total_column: str) -> Tuple[float, float]:\n",
     "    \n",
-    "    #df_threshold = df[df[\"n_starts\"] >= MIN_STARTS_THRESHOLD]\n",
-    "    # TODO\n",
-    "    df_threshold = df.copy()\n",
-    "\n",
+    "    df_threshold = df[df[\"n_starts\"] >= MIN_STARTS_THRESHOLD]\n",
     "    x = df_threshold[x_column].values\n",
     "    total = df_threshold[total_column].values\n",
     "\n",
@@ -266,7 +263,6 @@
     "            'beta0': beta0\n",
     "        }\n",
     "\n",
-    "    # store smoothing params\n",
     "    with open('output/smoothing/smoothing_params.json', 'w') as f:\n",
     "        json.dump(smoothing_params, f)\n",
     "\n",
